# LogicTableauChecker

./: .gitignore  README.md  stack.yaml  tableauChecker.cabal
app/: Main.hs
src/: Axioms.hs  FmlaParser.hs  Formula.hs  Prover.hs
test/: AxiomTest.hs  FmlaParserTest.hs  FormulaTest.hs  ProverTest.hs  Spec.hs
