name:                tableauChecker
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/tableauChecker#readme
license:             BSD3
license-file:        LICENSE
author:              Janos Potecki
maintainer:          janospotecki@outlook.com
copyright:           2016 Author name here
category:            Propositional Logic
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Formula
                     , Prover
                     , Axioms
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable tableauChecker-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tableauChecker
  default-language:    Haskell2010

test-suite tableauChecker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       AxiomTest
                     , FormulaTest
                     , ProverTest
  build-depends:       base
                     , QuickCheck
                     , tableauChecker
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jpotecki/LogicTableauChecker
